logs/xtree.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/XTree'...
Compiling './lib/python3.5/site-packages/XTree/Dir.py'...
***   File "./lib/python3.5/site-packages/XTree/Dir.py", line 32
    print '%s is not a directory.' % self.archive
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/XTree/FileSystem.py'...
***   File "./lib/python3.5/site-packages/XTree/FileSystem.py", line 30
    print 'Duplicated file names found, use --separator option'
                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/XTree/Tar.py'...
***   File "./lib/python3.5/site-packages/XTree/Tar.py", line 36
    print '%s is not a tarball.' % self.archive
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/XTree/Zip.py'...
***   File "./lib/python3.5/site-packages/XTree/Zip.py", line 39
    print '%s is not a zipfile.' % self.archive
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xtree-0.2.egg-info'...
Listing './share'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
